Fix: README update and add css styles

--- a/fluxMusic_front/src/styles/header.css
+++ b/fluxMusic_front/src/styles/header.css
@@ -4,6 +4,17 @@
   justify-content: space-evenly;
   position: relative;
   height: 15vh;
+  padding: 15px;
+}
+
+.logo {
+  width: 100px;
+}
+
+.nav-btns-container {
+  display: flex;
+  width: 80vw;
+  justify-content: space-around;
 }
 
 .nav-btn {
